# Copyright (c) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//foundation/communication/dsoftbus/dsoftbus.gni")

config("bus_center_client_interface") {
  include_dirs = [
    "manager/include",
    "$dsoftbus_root_path/interfaces/kits/bus_center",
    "$dsoftbus_root_path/interfaces/kits/common",
    "$dsoftbus_root_path/interfaces/kits",
    "$dsoftbus_root_path/core/connection/interface",
    "$dsoftbus_root_path/core/common/softbus_property/include",
    "$softbus_adapter_config/spec_config",
  ]
}

if (defined(ohos_lite)) {
  import("//build/lite/config/component/lite_component.gni")
  if (ohos_kernel_type == "liteos_m") {
  } else {
    shared_library("dsoftbus_bus_center_manager_sdk") {
      include_dirs = [
        "ipc/include",
        "$softbus_adapter_common/include",
        "$dsoftbus_root_path/core/common/include",
        "$dsoftbus_root_path/core/common/inner_communication",
        "$dsoftbus_root_path/core/bus_center/interface",
        "$dsoftbus_root_path/core/common/softbus_property/include",
        "$softbus_adapter_config/spec_config",
        "//third_party/bounds_checking_function/include",
        "$hilog_lite_include_path",
      ]
      sources = [
        "ipc/small/bus_center_server_proxy.c",
        "manager/src/client_bus_center_manager.c",
      ]
      public_configs = [ ":bus_center_client_interface" ]
      deps = [
        "$dsoftbus_root_path/adapter:softbus_adapter",
        "$dsoftbus_root_path/core/common/softbus_property:softbus_property",
        "$dsoftbus_root_path/core/common/utils:softbus_utils",
        "$hilog_lite_deps_path",
        "//foundation/communication/ipc_lite:liteipc_adapter",
        "//foundation/distributedschedule/samgr_lite/samgr:samgr",
      ]
    }
  }
} else {
  import("//build/ohos.gni")

  ohos_shared_library("dsoftbus_bus_center_manager_sdk") {
    include_dirs = [
      "ipc/include",
      "ipc/standard/include",
      "$softbus_adapter_common/include",
      "$dsoftbus_root_path/core/common/include",
      "$dsoftbus_root_path/core/bus_center/interface",
      "$dsoftbus_root_path/core/frame/standard/server/include",
      "$dsoftbus_root_path/core/transmission/common/include",
      "$dsoftbus_root_path/interfaces/kits/discovery",
      "$dsoftbus_root_path/interfaces/kits/transport",
      "$dsoftbus_root_path/core/common/softbus_property/include",
      "$softbus_adapter_config/spec_config",
      "//utils/system/safwk/native/include",
    ]
    sources = [
      "ipc/standard/src/bus_center_server_proxy.cpp",
      "ipc/standard/src/bus_center_server_proxy_standard.cpp",
      "manager/src/client_bus_center_manager.c",
    ]
    public_configs = [ ":bus_center_client_interface" ]
    deps = [
      "$dsoftbus_root_path/adapter:softbus_adapter",
      "$dsoftbus_root_path/core/common/softbus_property:softbus_property",
      "$dsoftbus_root_path/core/common/utils:softbus_utils",
      "//utils/native/base:utils",
    ]
    if (is_standard_system) {
      external_deps = [
        "hiviewdfx_hilog_native:libhilog",
        "ipc:ipc_single",
      ]
    }
    part_name = "dsoftbus_standard"
    subsystem_name = "communication"
  }
}
