# Copyright (c) 2021-2024 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("../../dsoftbus.gni")

bus_center_service_sdk_src =
    [ "$dsoftbus_root_path/sdk/bus_center/service/src/client_bus_center.c" ]
bus_center_service_sdk_inc = [
  "$dsoftbus_root_path/sdk/bus_center/service/include",
  "$dsoftbus_dfx_path/interface/include",
  "$dsoftbus_root_path/core/frame/common/include",
]

bus_center_manager_sdk_src = []
bus_center_manager_sdk_inc =
    [ "$dsoftbus_root_path/sdk/bus_center/manager/include" ]
bus_center_manager_sdk_deps = []
if (defined(ohos_lite)) {
  if (ohos_kernel_type == "liteos_m") {
    bus_center_manager_sdk_inc += [
      "$dsoftbus_root_path/sdk/bus_center/ipc/include",
      "$dsoftbus_root_path/core/adapter/kernel/include",
      "$dsoftbus_root_path/interfaces/kits/bus_center",
      "$dsoftbus_root_path/core/bus_center/interface",
      "$dsoftbus_root_path/core/bus_center/ipc/include",
    ]
    bus_center_manager_sdk_src += [
      "$dsoftbus_root_path/sdk/bus_center/ipc/mini/bus_center_server_proxy.c",
      "$dsoftbus_root_path/sdk/bus_center/manager/src/client_bus_center_manager.c",
      "$dsoftbus_root_path/sdk/bus_center/manager/src/softbus_client_init.c",
    ]
    bus_center_manager_sdk_inc += [
      "$dsoftbus_root_path/core/bus_center/extend/include",
      "$dsoftbus_root_path/interfaces/kits/bus_center/enhance",
      "$dsoftbus_root_path/sdk/bus_center/interface/common",
      "$dsoftbus_root_path/core/frame/common/include",
      "$dsoftbus_root_path/components/nstackx/fillp/include",
    ]
  } else {
    bus_center_manager_sdk_inc += [
      "$dsoftbus_root_path/sdk/bus_center/ipc/include",
      "$dsoftbus_root_path/interfaces/kits/bus_center",
      "$dsoftbus_root_path/core/bus_center/interface",
      "$dsoftbus_root_path/core/common/include",
      "$dsoftbus_root_path/sdk/bus_center/interface/common",
      "$dsoftbus_root_path/core/frame/common/include",
    ]
    bus_center_manager_sdk_src += [
      "$dsoftbus_root_path/sdk/bus_center/ipc/small/bus_center_server_proxy.c",
      "$dsoftbus_root_path/sdk/bus_center/manager/src/client_bus_center_manager.c",
      "$dsoftbus_root_path/sdk/bus_center/manager/src/softbus_client_init.c",
    ]
    bus_center_manager_sdk_deps += [
      "//foundation/communication/ipc/interfaces/innerkits/c/ipc:ipc_single",
      "//foundation/systemabilitymgr/samgr_lite/samgr:samgr",
    ]
    bus_center_manager_sdk_inc += [
      "$dsoftbus_root_path/core/bus_center/extend/include",
      "$dsoftbus_root_path/interfaces/kits/bus_center/enhance",
      "$dsoftbus_root_path/sdk/bus_center/interface/common",
      "$dsoftbus_root_path/core/frame/common/include",
      "$dsoftbus_root_path/components/nstackx/fillp/include",
    ]
  }
} else {
  bus_center_manager_sdk_inc += [
    "$dsoftbus_root_path/sdk/bus_center/ipc/include",
    "$dsoftbus_root_path/sdk/bus_center/ipc/$os_type/include",
    "$dsoftbus_root_path/interfaces/kits/bus_center",
    "$dsoftbus_root_path/core/bus_center/interface",
    "$dsoftbus_root_path/core/common/include",
    "$dsoftbus_root_path/core/frame/$os_type/init/include",
    "$dsoftbus_root_path/core/transmission/common/include",
    "$dsoftbus_root_path/interfaces/inner_kits/lnn",
    "$dsoftbus_root_path/interfaces/kits/discovery",
    "$dsoftbus_root_path/interfaces/kits/transport",
  ]
  bus_center_manager_sdk_src += [
    "$dsoftbus_root_path/sdk/bus_center/ipc/$os_type/src/bus_center_server_proxy.cpp",
    "$dsoftbus_root_path/sdk/bus_center/ipc/$os_type/src/bus_center_server_proxy_standard.cpp",
    "$dsoftbus_root_path/sdk/bus_center/manager/src/client_bus_center_manager.c",
    "$dsoftbus_root_path/sdk/bus_center/manager/src/softbus_client_init.c",
  ]

  bus_center_manager_sdk_inc += [
    "$dsoftbus_root_path/core/bus_center/extend/include",
    "$dsoftbus_root_path/interfaces/kits/bus_center/enhance",
    "$dsoftbus_root_path/sdk/bus_center/interface/common",
    "$dsoftbus_root_path/core/frame/common/include",
    "$dsoftbus_root_path/components/nstackx/fillp/include",
  ]

  bus_center_manager_sdk_src += [ "$dsoftbus_root_path/core/bus_center/extend/src/bus_center_ex_obj_proxy.cpp" ]
}

bus_center_sdk_src = bus_center_service_sdk_src + bus_center_manager_sdk_src
bus_center_sdk_inc = bus_center_service_sdk_inc + bus_center_manager_sdk_inc
bus_center_sdk_deps = bus_center_manager_sdk_deps
